src/objects/SurveyMapping__c.object
<CustomObject>
    <fields>
        <fullName>IntervieweeApiField__c</fullName>
        <description>Api Field Name of the mapped object to save the Interviewee data</description>
        <label>Interviewee Map Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the survey mapping is a reference only. This means that the object this mapping is for will not be created/updated it is just fetched to allow another object to include it in a MD or Lookup field</description>
        <label>Is Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchingField__c</fullName>
        <description>Api Field Name of the mapped object to save the Interviewee data</description>
        <inlineHelpText>Set this field to prevent duplicated records. The system will check into the &quot;matching field&quot;, if the value for the &quot;matching field&quot; already exists it will update the record(not insert).</inlineHelpText>
        <label>Matching Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <description>The Api Name of the parent object of the fields, defined in the related QuestionMappings records, where its going to be store the mapping fields data</description>
        <label>Object Api Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPIScoreApiField__c</fullName>
        <description>Api Field Name of the mapped object to save the PPI score</description>
        <label>PPI Score Mapping Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repeat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated repeated section.</description>
        <label>Repeat</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Survey Mappings</relationshipLabel>
        <relationshipName>Survey_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmissionApiField__c</fullName>
        <description>Api Field Name of the mapped object to save the Submission</description>
        <label>Submission Map Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyApiField__c</fullName>
        <description>Api Field Name of the mapped object to save the Survey data</description>
        <label>Survey Mapping Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyVersionApiField__c</fullName>
        <description>Api Field Name of the mapped object to save the Survey Version data</description>
        <label>Survey Version Mapping Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Mappings</relationshipLabel>
        <relationshipName>Survey_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SurveyorApiField__c</fullName>
        <description>Api Field Name of the mapped object to save the Surveyor data</description>
        <label>Surveyor Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseAsInterviewee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use This Mapped Contact As Interviewee</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SurveyMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IntervieweeApiFieldMustBeBlank</fullName>
        <active>true</active>
        <description>The IntervieweeApiField has been deprecated so ensure that it has not been  set to anything</description>
        <errorConditionFormula>NOT(ISBLANK(IntervieweeApiField__c))</errorConditionFormula>
        <errorMessage>Interviewee Api Field must be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IntervieweeMappingCheck</fullName>
        <active>false</active>
        <errorConditionFormula>IF(UseAsInterviewee__c=TRUE, AND(IntervieweeApiField__c !=&apos;&apos;,IntervieweeApiField__c !=null), false)</errorConditionFormula>
        <errorMessage>If the Mapping is use as Interviewee can&apos;t map an interviewee field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UseAsIntervieweeIsFalse</fullName>
        <active>true</active>
        <description>UseAsInterviewee has been deprecated so this field must always be set to false</description>
        <errorConditionFormula>UseAsInterviewee__c</errorConditionFormula>
        <errorMessage>Use As Interviewee has been deprecated. Please do not set this field to true</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>onlyContactInteviewee</fullName>
        <active>false</active>
        <errorConditionFormula>IF(UseAsInterviewee__c=TRUE,  UPPER(ObjectApiName__c) != &apos;CONTACT&apos;, false)</errorConditionFormula>
        <errorMessage>Only the contact object can be used as interviewee</errorMessage>
    </validationRules>
</CustomObject>